# esp32s3_usb_camera

./: README.md
esp-iot-solution-master/components/display/lcd/esp_lcd_spd2010/include/: esp_lcd_spd2010.h
esp-iot-solution-master/components/display/lcd/esp_lcd_st77916/: README.md
esp-iot-solution-master/components/motor/esp_sensorless_bldc_control/user_cfg/: bldc_user_cfg.h
esp-iot-solution-master/examples/usb/host/usb_camera_mic_spk/main/: main.c
my_esp_idf/esp-iot-solution-master/components/display/lcd/esp_lcd_sh8601/test_apps/main/: idf_component.yml
my_esp_idf/esp-iot-solution-master/examples/usb/host/usb_camera_mic_spk/main/: main.c
python/: usb_camear.py
python/test3/: 01.open_jpeg.py  02.open_jpeg.py  03.open_jpeg.py  04.open_jpeg.py  05.open_jpeg.py  06.open_jpeg.py  usb_camear.py  usb_capture_output.avi
usb_camera_mic_spk/: CMakeLists.txt  sdkconfig
usb_camera_mic_spk/components/usb_stream/: CMakeLists.txt
usb_camera_mic_spk/main/: CMakeLists.txt  idf_component.yml  main.c
